Fixed logstash to generate logs directly from logback